# opendihu

./: CMakeLists.txt
cmake/: FindBASE64.cmake  config.cmake  find_dependencies.cmake  opendihu_config.h.in
core/: CMakeLists.txt
core/src/: opendihu.h  vc_or_std_simd.h
core/src/cellml/source_code_generator/: 00_source_code_generator_base.cpp  01_generator_simd.cpp  02_generator_openmp.cpp  03_generator_vc.cpp  04_generator_gpu.cpp
core/src/control/: dihu_context.cpp
core/src/control/initialization/: initialize_python.cpp
core/src/control/precice/surface_coupling/: 00_nested_solver.tpp  01_initialize.h  02_read_write.tpp  03_checkpoint.h  03_checkpoint.tpp
core/src/partition/partitioned_petsc_vec/: partitioned_petsc_vec.h  partitioned_petsc_vec_n_components_structured.tpp  partitioned_petsc_vec_structured.tpp  partitioned_petsc_vec_unstructured.tpp
core/src/specialized_solver/fast_monodomain_solver/: fast_monodomain_solver_base.h
core/src/specialized_solver/multidomain_solver/: multidomain_solver.tpp  multidomain_with_fat_solver.tpp  nested_mat_vec_utility.cpp
core/src/specialized_solver/solid_mechanics/hyperelasticity/: 00_initialize.tpp
core/src/utility/: petsc_utility.cpp
example_cmake/: CMakeLists.txt
examples/electrophysiology/fibers/fibers_contraction/with_tendons_precice/cubic_muscle/src/: hodgkin_huxley_1952_fast_monodomain.c
examples/electrophysiology/neuromuscular/Debug/just_prestretch_two_muscles_with_tendon/: settings.py  start_simulation.py
examples/electrophysiology/neuromuscular/Debug/one_muscles_with_tendon/src/: one_muscles_with_tendon.cpp
examples/electrophysiology/neuromuscular/Debug/simple_two_muscles_with_tendon/: settings.py
examples/electrophysiology/neuromuscular/Debug/two_muscles_with_tendon_multidomain/: helper.py
examples/electrophysiology/neuromuscular/Debug/two_muscles_with_tendon_multidomain/src/: two_muscles_with_tendon_multidomain.cpp
examples/electrophysiology/neuromuscular/MCMC_cubic_muscle_only_monodomain_and_contraction/: settings.py
examples/electrophysiology/neuromuscular/MCMC_cubic_muscle_only_monodomain_and_contraction/variables/: variables.py
examples/electrophysiology/neuromuscular/MCMC_cubic_muscle_only_monodomain_and_contraction_prestretched/: helper.py
examples/electrophysiology/neuromuscular/MCMC_cubic_muscle_only_monodomain_and_contraction_prestretched/src/: muscle_neuromuscular.cpp
examples/electrophysiology/neuromuscular/MCMC_cubic_muscle_only_monodomain_and_contraction_prestretched/variables/: variables.py
examples/electrophysiology/neuromuscular/MCMC_cubic_muscle_only_monodomain_and_contraction_prestretched_fixed_end/: helper.py  settings.py
examples/electrophysiology/neuromuscular/cubic_muscle_no_sensory_organs/: settings.py
examples/electrophysiology/neuromuscular/just_prestretch_two_muscles_with_tendon/: SConscript  helper.py
examples/electrophysiology/neuromuscular/just_prestretch_two_muscles_with_tendon/src/: just_prestretch_two_muscles_with_tendon.cpp
examples/electrophysiology/neuromuscular/just_prestretch_two_muscles_with_tendon/variables/: variables.py
examples/electrophysiology/neuromuscular/one_muscles_with_tendon/: SConscript  settings.py
examples/electrophysiology/neuromuscular/one_muscles_with_tendon/variables/: variables.py
examples/electrophysiology/neuromuscular/prestretch_two_muscles_with_tendon/: SConscript  settings.py
examples/electrophysiology/neuromuscular/prestretch_two_muscles_with_tendon/src/: prestretch_two_muscles_with_tendon.cpp
examples/electrophysiology/neuromuscular/prestretch_two_muscles_with_tendon/variables/: variables.py
examples/electrophysiology/neuromuscular/simple_two_muscles_with_tendon/: SConscript  helper.py
examples/electrophysiology/neuromuscular/simple_two_muscles_with_tendon/src/: simple_two_muscles_with_tendon.cpp
examples/electrophysiology/neuromuscular/spindles_fibers/: settings_spindles_fibers.py
examples/electrophysiology/neuromuscular/surface_coupling/muscle_tendon_reverse/: precice_config.xml  settings_muscle.py  settings_tendon.py
examples/electrophysiology/neuromuscular/two_muscles_with_tendon_multidomain/: SConscript  settings.py
examples/electrophysiology/neuromuscular/two_muscles_with_tendon_multidomain/variables/: variables.py
testing/link_test/: CMakeLists.txt  test_adios2.cpp  test_base64.cpp  test_blas.cpp  test_experimental_simd.cpp  test_gnu_openmp.cpp  test_gtest.cpp  test_lapacke.cpp  test_petsc.cpp  test_precice.cpp  test_semt.cpp  test_vc.cpp  test_xbraid.cpp
